[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.1.6"
git2 = "0.18.1"
home = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
